--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -3,17 +3,20 @@
     height: 100px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding-top: 15px;
+    margin-bottom: 20px;
 }
 
 .sendButton {
     width: 70px;
     height: 50px;
     border-radius: 10px;
-    border: 1px solid rgb(52, 52, 252);
-    background-color: rgb(52, 52, 252);
-    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-    color: white;
+    border: 1px solid #ffffff;
+    background: rgba(235, 235, 241, 0.531);
+    box-shadow: 4px 4px 8px 0px rgba(239, 240, 241, 0.565);
+    color: rgb(83, 31, 31);
+    font-weight: 600;
     cursor: pointer;
 }
 
@@ -21,89 +24,27 @@
     width: 60%;
     height: 100%;
     border-radius: 10px;
-    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-    border: 1px solid lightgrey;
+    box-shadow: 4px 4px 8px 0px rgba(239, 240, 241, 0.565);
+    border: 2px solid lightgrey;
     padding-left: 20px;
     padding-right: 20px;
+    margin-right: 15px;
+    background: transparent;
+    color: #ffffff;
+    outline:none;
 }
 
 .chatWrapper {
     width: 100%;
+    height: 100%;
+    background: url('https://img.lifter.com.ua/data/2018/august/3133/photo-1510148199876-8a856ee41d42.jfif');
 }
 
 .messageWrapper {
-    margin-top: 20px;
-    width: auto;
-}
-
-.messageItem-enter-active {
-  animation: rollInLeft 0.6s ease-out both;
-}
-
-.messageItem-exit-active {
-  animation: rollOutLeft 0.6s ease-in both;
-}
-
-
-.rollInLeft {
-	-webkit-animation: rollInLeft 0.6s ease-out both;
-	        animation: rollInLeft 0.6s ease-out both;
-}
-
-/* .rollOutLeft {
-	-webkit-animation: rollOutLeft 0.6s ease-in both;
-	        animation: rollOutLeft 0.6s ease-in both;
-} */
-
-
-@-webkit-keyframes rollInLeft {
-  0% {
-    -webkit-transform: translateX(-800px) rotate(-540deg);
-            transform: translateX(-800px) rotate(-540deg);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateX(0) rotate(0deg);
-            transform: translateX(0) rotate(0deg);
-    opacity: 1;
-  }
-}
-@keyframes rollInLeft {
-  0% {
-    -webkit-transform: translateX(-800px) rotate(-540deg);
-            transform: translateX(-800px) rotate(-540deg);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateX(0) rotate(0deg);
-            transform: translateX(0) rotate(0deg);
-    opacity: 1;
-  }
-}
-
-
-@-webkit-keyframes rollOutLeft {
-  0% {
-    -webkit-transform: translateX(0) rotate(0deg);
-            transform: translateX(0) rotate(0deg);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: translateX(-1000px) rotate(-540deg);
-            transform: translateX(-1000px) rotate(-540deg);
-    opacity: 0;
-  }
-}
-@keyframes rollOutLeft {
-  0% {
-    -webkit-transform: translateX(0) rotate(0deg);
-            transform: translateX(0) rotate(0deg);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: translateX(-1000px) rotate(-540deg);
-            transform: translateX(-1000px) rotate(-540deg);
-    opacity: 0;
-  }
+    width: 90%;
+    height: 70%;
+    overflow: auto;
+    overflow-x: hidden;
+    margin: 0 auto;
 }
 
