--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -2,6 +2,8 @@
     width: 100%;
     height: 100%;
     background: url('https://img.lifter.com.ua/data/2018/august/3133/photo-1510148199876-8a856ee41d42.jfif');
+    background-position: center;
+    background-size: cover;
     .chatWrapper__messageBlock {
         width: 90%;
         height: 70%;
@@ -10,7 +12,6 @@
         margin: 0 auto;
     }
 }
-
 
 /* animations */
 
@@ -163,5 +164,3 @@
     opacity: 0;
   }
 }
-
-
